# awesome-nano-banana-index

./: .env  .gitignore  .gitmodules  DOCKER_SETUP.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  manage_db.py  monitor.sh  pyproject.toml  repo-list.md  requirements.txt  restart.sh  run-indexing.sh  run-local.sh  run_local.sh  start.sh  stop.sh  update_submodules.sh  viewer.html  watch_and_index.py
.cursor/commands/: git-commit-and-push.md
docs/: QUICKSTART_LOCAL.md  RUN_WITHOUT_DOCKER.md  future-enhancements.md
extractors/: __init__.py  cuigh.py  hilda.py  jermic.py  jimmy.py  mickorix.py  new_extractors.py  picotrex.py  zerolu.py
nginx/: nginx.conf
search/: README.md  __init__.py  __main__.py  cli.py  config.py  indexer.py  search.py  utils.py  web_app.py
static/: style.css
templates/: index.html
